--- a/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.css
+++ b/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.css
@@ -125,3 +125,10 @@
     color: black;
     border: black 1px solid;
 }
+
+.invalid-feedback {
+  color: #ffae00;
+  padding-top: 5px;
+  display: flex;
+  font-size: 12px;
+}
