--- a/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,7 +1,4 @@
 <div class="container w-100">
-   <!-- <div class="card" style="visibility: hidden;"> 
-   </div> -->
-
    <div class="card">
       <!-- <app-alert></app-alert> -->
          <div class="log-in-title">
@@ -12,18 +9,17 @@
              <form class="row g-4" [formGroup]="form" (ngSubmit)="onSubmitForm();">
                <div class="col-12">
                   <div class="form-floating theme-form-floating log-in-form">
-                     <input type="text" class="form-control" id="email"  placeholder="{{ 'email_address' | translate}}" />
-                     <!-- @if(form.controls['email'].touched && form.controls['email'].errors?.['required']){
+                     <input type="text" class="form-control" id="email" formControlName="email" placeholder="{{ 'email_address' | translate}}" />
+                     @if(form.controls['email'].touched && form.controls['email'].errors?.['required']) {
                         <div class="invalid-feedback">
-                           {{ 'email_is_required' | translate }}
+                           {{'email_is_required' | translate}}
                         </div>
                      }
-
-                     @if(form.controls['email'].touched && form.controls['email'].errors?.['email']){
+                     @if(form.controls['email'].touched && form.controls['email'].errors?.['email']) {
                         <div class="invalid-feedback">
-                           {{ 'invalid_email' | translate }}
+                           {{'invalid_email' | translate}}
                         </div>
-                     } -->
+                     }
                   </div>
                </div>
                <div class="col-12">
