--- a/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
+++ b/angular-simpliKart-admin/src/app/components/auth/update-password/update-password.component.html
@@ -12,33 +12,27 @@
              <form class="row g-4" [formGroup]="form" (ngSubmit)="onSubmitForm();">
                <div class="col-12">
                   <div class="form-floating theme-form-floating log-in-form">
-                     <input type="password" class="form-control" id="password" formControlName="password" placeholder="{{ 'password' | translate  }}" />
-                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                     <input type="password" class="form-control" id="newPassword" name="newPassword" formControlName="newPassword" placeholder="{{ 'new_password' | translate  }}" />
+                     @if (form.controls['newPassword'].touched && form.controls['newPassword'].errors?.['required']) {
                         <div class="invalid-feedback">
-                           {{ 'password_is_required' | translate }}
+                           {{'new_password_is_required' | translate}}
                         </div>
-                     } -->
+                     }
                   </div>
                </div>
                <div class="col-12">
                   <div class="form-floating theme-form-floating log-in-form">
-                     <input type="password" class="form-control" id="new_password" formControlName="new_password" placeholder="{{ 'new_password' | translate  }}" />
-                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
+                     <input [type]="show ? 'text' : 'password'"  class="form-control" id="confirmPassword" formControlName="confirmPassword" placeholder="{{ 'confirm_password' | translate  }}" />
+                     @if(form.controls['confirmPassword'].touched && form.controls['confirmPassword'].errors?.['required']) {
                         <div class="invalid-feedback">
-                           {{ 'password_is_required' | translate }}
+                           {{'confirm_password_is_required' | translate}}
                         </div>
-                     } -->
-                  </div>
-               </div>
-               <div class="col-12">
-                  <div class="form-floating theme-form-floating log-in-form">
-                     <input type="password" class="form-control" id="enter_confirm_password" formControlName="enter_confirm_password" placeholder="{{ 'enter_confirm_password' | translate  }}" />
-                     <!-- <label for="password">{{ 'password' | translate }}</label> -->
-                     <!-- @if(form.controls['password'].touched && form.controls['password'].errors?.['required']){
-                        <div class="invalid-feedback">
-                           {{ 'password_is_required' | translate }}
+                     }
+                     <!-- @if(!form.controls['confirmPassword'].errors?.['required']) {
+                        <div>
+                           <div class="show-hide" (click)="showPassword()">
+                              <span class="show" [ngClass]="show ? 'Hide' : 'show'"></span>
+                           </div>
                         </div>
                      } -->
                   </div>
